--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="x-ua-compatible" content="ie=edge, chrome=1">
     <meta charset="UTF-8">
-    <title>image-beta</title>
+    <title>Heimdallr</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="max-age: 31536000">
     <meta name="viewport"
@@ -14,24 +14,24 @@
     <meta name="description" content="">
 
     <!-- Name of web application (only should be used if the website is used as an app) -->
-    <meta name="application-name" content="develop-republix">
+    <meta name="application-name" content="Heimdallr">
 
     <!-- Short description of the page (limit to 150 characters) -->
     <!-- In *some* situations this description is used as a part of the snippet shown in the search results. -->
-    <meta name="description" content="hah">
+    <meta name="description" content="fuck ordinary">
 
     <!-- Control the behavior of search engine crawling and indexing -->
     <meta name="robots" content="index,follow,noodp"><!-- All Search Engines -->
     <meta name="googlebot" content="index,follow"><!-- Google Specific -->
 
     <!-- Short description of your site's subject -->
-    <meta name="subject" content="haha">
+    <meta name="subject" content="images">
 
     <!-- Very short sentence describing the purpose of the website -->
-    <meta name="abstract" content="haha">
+    <meta name="abstract" content="images">
 
     <!-- Describes the topic of the website -->
-    <meta name="topic" content="">
+    <meta name="topic" content="images collage">
 
     <!-- Brief summary of the company or purpose of the website -->
     <meta name="summary" content="">
@@ -56,8 +56,8 @@
 
 
     <!-- Gives information about an author or another person -->
-    <link rel="someOneMail" href="mailto:haha@develop.com">
-    <link rel="someOneTel" href="tel:+86123456">
+    <!-- <link rel="someOneMail" href="mailto:haha@develop.com"> -->
+    <!-- <link rel="someOneTel" href="tel:+86123456"> -->
 
 
 
